apps/qbittorrent/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qb.dozydelta.com`)
      kind: Rule
      middlewares:
        - name: ak-outpost-dozynet
          namespace: authentik
      services:
        - name: qbittorrent
          port: 8080
  tls:
    secretName: dozydelta-wildcard-tls
